[PATCH] Update paste sensitivity whenever clipboard changes - fixes #17 (originally reported and fixed here: https://bugzilla.gnome.org/show_bug.cgi?id=600876)